added catalan and spanish languages

--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ APP_KEY=jvP1DaGlUrM1rB6XgfSHg61J2SGx63Yt
 
 DB_HOST=localhost
 DB_DATABASE=citymesapp
-DB_USERNAME=myapp3623
-DB_PASSWORD=xbbP9GMw
+DB_USERNAME=dbuser
+DB_PASSWORD=dbuser
 
 STRIPE_APP_KEY=sk_test_lVJyv8DGoWGMKf8N1zRwXqhi
 STRIPE_APP_PUBLIC_KEY=pk_test_fjt9ACuWVN0bsfX5wYqbWuqb
